[workspace]
members = [
	"l1x-contracts/*",
]

[workspace.package]
authors = ["l1x-team <info@l1x.foundation>"]
edition = "2021"
repository = "https://github.com/L1X-Foundation-Consensus/l1x-examples"

[workspace.dependencies]
l1x-sdk = { git = "https://github.com/L1X-Foundation-VM/l1x-templ-sdk.git", package = "l1x-sdk", version = "0.2.1" }
