[package]
name = "l1x-cross-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
l1x-sdk = { workspace = true }
borsh = { version = "0.9", features = ["const-generics"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
